--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,27 @@
 <html>
     <head>
         <title>prc</title>
-    </head>
+        <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.5.1/leaflet.css" />
+        <!--[if lte IE 8]>
+           <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.5.1/leaflet.ie.css" />
+           <![endif]-->
 
+    </head>
+    <body>
+        <div id="map" style="height:500px; width:500px;"div>
+        <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
+        <script src="//cdnjs.cloudflare.com/ajax/libs/foundation/4.1.2/js/foundation.min.js"></script>
+        <script src="http://cdn.leafletjs.com/leaflet-0.5.1/leaflet.js"></script> 
+        <script src="/client/components/leaflet-providers/leaflet-providers.js"></script>
+        <script src="http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.4.4/underscore-min.js"></script> 
+        <script src="http://cdnjs.cloudflare.com/ajax/libs/backbone.js/0.9.10/backbone-min.js"></script>
+
+        <script src="/client/js/TemplateLoader"></script>
+        <script src="/client/js/prc.js"></script>
+        <script src="/client/js/Prc/app.js"></script>
+        <script src="/client/js/Prc/map.js"></script>
+        <script src="/client/js/Prc/parcel.js"></script>
+        <script type="text/javascript">
+            $(Prc.app.init());
+        </script>
 </html>
