Fix up template loader

--- a/templates/index.html
+++ b/templates/index.html
@@ -17,8 +17,8 @@
         <script src="http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.4.4/underscore-min.js"></script> 
         <script src="http://cdnjs.cloudflare.com/ajax/libs/backbone.js/0.9.10/backbone-min.js"></script>
 
-        <script src="/client/js/TemplateLoader"></script>
         <script src="/client/js/prc.js"></script>
+        <script src="/client/js/TemplateLoader.js"></script>
         <script src="/client/js/Prc/app.js"></script>
         <script src="/client/js/Prc/map.js"></script>
         <script src="/client/js/Prc/parcel.js"></script>
