--- a/templates/index.html
+++ b/templates/index.html
@@ -3,13 +3,14 @@
     <head>
         <title>prc</title>
         <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.5.1/leaflet.css" />
+        <link rel="stylesheet" href="client/app.css"/>
         <!--[if lte IE 8]>
            <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.5.1/leaflet.ie.css" />
            <![endif]-->
 
     </head>
     <body>
-        <div id="map" style="height:500px; width:500px;"div>
+        <div id="map"> </div>
         <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
         <script src="//cdnjs.cloudflare.com/ajax/libs/foundation/4.1.2/js/foundation.min.js"></script>
         <script src="http://cdn.leafletjs.com/leaflet-0.5.1/leaflet.js"></script> 
