--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,8 @@
         <title>prc</title>
         <link rel="stylesheet" href="//cdn.jsdelivr.net/foundation/4.1.2/css/foundation.min.css"/>
         <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.5.1/leaflet.css" />
-        <link rel="stylesheet" href="client/app.css"/>
+        <link rel="stylesheet" href="client/css/app.css"/>
+        <link rel="stylesheet" href="client/css/jquery.philaddress.css"/>
         <!--[if lte IE 8]>
            <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.5.1/leaflet.ie.css" />
            <![endif]-->
@@ -13,7 +14,7 @@
     <body>
         <header class="main">
             <div class="logo">prc</div>
-            <div class="search-bar">
+            <div id="search-container" class="search-bar">
                 <input id="search" type="search" autofocus/>
             </div>
         </header>
@@ -41,10 +42,12 @@
         <script src="http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.4.4/underscore-min.js"></script> 
         <script src="http://cdnjs.cloudflare.com/ajax/libs/backbone.js/0.9.10/backbone-min.js"></script>
 
+        <script src="/client/js/jquery.philaddress.js"></script>
         <script src="/client/js/prc.js"></script>
         <script src="/client/js/TemplateLoader.js"></script>
         <script src="/client/js/Prc/app.js"></script>
         <script src="/client/js/Prc/parcel.js"></script>
+        <script src="/client/js/Prc/search.js"></script>
         <script src="/client/js/Prc/map.js"></script>
         <script type="text/javascript">
             $(Prc.app.init());
