--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>prc</title>
-        <link rel="stylesheet" href="//cdn.jsdelivr.net/foundation/4.1.2/css/foundation.min.css"/>
+        <link rel="stylesheet" href="client/css/foundation.min.css"/>
         <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.5.1/leaflet.css" />
         <link rel="stylesheet" href="client/css/app.css"/>
         <link rel="stylesheet" href="client/css/jquery.philaddress.css"/>
@@ -21,7 +21,7 @@
             </div>
         </header>
         <div id="map"> </div>
-        <div id="login-dropdown" class="f-dropdown content" data-dropdown-content></div>
+        <ul id="login-dropdown" class="f-dropdown content" data-dropdown-content></ul>
 
         <script type="text/template" id="template-parcel-detail">
             <h4><%=parcel.Address%></h4>
@@ -39,31 +39,29 @@
         </script>
 
         <script type="text/template" id="template-login-form">
-            <form>
                 <div class="row">
                     <div class="large-12 columns">
-                        <input type="text" placeholder="Username"> 
+                        <input class="username" type="text" placeholder="Username"> 
                     </div>
                     <div class="large-12 columns">
-                        <input type="password" placeholder="Password">
+                        <input class="password" type="password" placeholder="Password">
                     </div>
                     <div class="large-12 columns">
-                        <button class="button login">Login</button>
+                        <a class="button login">Login</a>
                     </div>
                 </div>
-            </form>
         </script>
 
         <script type="text/template" id="template-logout-form">
-            <button class="button logout">Logout</button>
+            <button class="button small logout">Logout</button>
         </script>
 
         <script type="text/template" id="template-login">
-            <a href="#" data-dropdown="login-dropdown" class="button small split"><%=action%><span></span></a>
+            <a data-dropdown="login-dropdown" class="button split small"><span></span><%=action%></a>
         </script>
 
         <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
-        <script src="//cdnjs.cloudflare.com/ajax/libs/foundation/4.1.2/js/foundation.min.js"></script>
+        <script src="/client/js/foundation.min.js"></script>
         <script src="http://cdn.leafletjs.com/leaflet-0.5.1/leaflet.js"></script> 
         <script src="/client/components/leaflet-providers/leaflet-providers.js"></script>
         <script src="http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.4.4/underscore-min.js"></script> 
