--- a/client/css/app.css
+++ b/client/css/app.css
@@ -27,6 +27,10 @@ header.main {
             padding: 10px;
         }
     
+    #login-container {
+        float: right;
+    }
+   
 #map-outer {
     margin-top: 75px;
 }
@@ -36,7 +40,14 @@ header.main {
     height: 100%;
 }
 
-
+#collection-town {
+    position: absolute;
+    left: 0;
+    height: 100%;
+    width: 200px;
+    background: white;
+    top: 100px;
+}
 /* LEAFLET OVERRIDES */
 .leaflet-popup .leaflet-popup-content-wrapper {
     border-radius: 5px;
