--- a/templates/index.html
+++ b/templates/index.html
@@ -26,7 +26,7 @@
 
         <script type="text/template" id="template-parcel-detail">
             <h4><%=parcel.Address%></h4>
-            <h5><% print(parcel.Owner1 + " " + parcel.Owner2);%></h5>
+            <h5><% print(parcel.Owner1 + (parcel.Owner2 ? " & " + parcel.Owner2 : ""));%></h5>
             <ul class="pd-parcel">
                 <li><div class="cap">OPA Account</div>
                     <div class="val"><%=parcel.OpaId%></div>            
@@ -63,6 +63,14 @@
 
         <script type="text/template" id="template-my-collections">
             <ul id="my-collection" class="collections"></ul>
+        </script>
+
+        <script type="text/template" id="template-save-to-collection">
+            <select class="save-to-collection"></select>
+        </script>
+
+        <script type="text/template" id="template-collection-option">
+            <option value="<%=id%>" <%=selected ? "selected" : ""%><%=name%></option>
         </script>
 
         <script type="text/template" id="template-collection">
