--- a/templates/index.html
+++ b/templates/index.html
@@ -70,7 +70,7 @@
         </script>
 
         <script type="text/template" id="template-collection-option">
-            <option value="<%=id%>" <%=selected ? "selected" : ""%><%=name%></option>
+            <option value="<%=id%>"><%=title%></option>
         </script>
 
         <script type="text/template" id="template-collection">
