Use local bower backbone

--- a/templates/index.html
+++ b/templates/index.html
@@ -85,7 +85,7 @@
         <script src="http://cdn.leafletjs.com/leaflet-0.5.1/leaflet.js"></script> 
         <script src="/client/components/leaflet-providers/leaflet-providers.js"></script>
         <script src="http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.4.4/underscore-min.js"></script> 
-        <script src="http://cdnjs.cloudflare.com/ajax/libs/backbone.js/0.9.10/backbone-min.js"></script>
+        <script src="/client/components/backbone/backbone-min.js"></script>
         <script src="/client/components/backbone.localStorage/backbone.localStorage.js"></script>
 
         <script src="/client/js/jquery.philaddress.js"></script>
