Re-render collection list when parcels are added

--- a/templates/index.html
+++ b/templates/index.html
@@ -74,10 +74,10 @@
         </script>
 
         <script type="text/template" id="template-collection">
-            <li class="collection">
-            <h5><%=title%><span> (<%=parcelIds.length%>)</span></h5>
-            <div><%=desc%></div>
-            </li>
+            <div>
+                <h5><%=title%><span> (<%=parcelIds.length%>)</span></h5>
+                <div><%=desc%></div>
+            </div>
         </script>
 
 
