Show the add collection form

--- a/templates/index.html
+++ b/templates/index.html
@@ -82,7 +82,7 @@
         </script>
 
         <script type="text/template" id="template-new-collection">
-            <div id="add-collection-modal" class="reveal-modal medium">
+            <div id="add-collection-modal" class="reveal-modal">
                 <h2>Create a new collection</h2>
                 <form>
                     <div class="row">
@@ -105,8 +105,8 @@
                     </div>
                     <div class="row">
                         <div class="large-9 columns">
-                            <button class="button small" id="add-collection">Add</button>
-                            <button class="button small cancel">Cancel</button>
+                            <a class="button small" id="add-collection">Add</a>
+                            <a class="button small cancel">Cancel</a>
                         </div>
                     </div>
                 </form>
@@ -116,6 +116,7 @@
             
         <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
         <script src="/client/js/foundation.min.js"></script>
+        <script src="/client/components/foundation/js/foundation/foundation.reveal.js"></script>
         <script src="http://cdn.leafletjs.com/leaflet-0.5.1/leaflet.js"></script> 
         <script src="/client/components/leaflet-providers/leaflet-providers.js"></script>
         <script src="http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.4.4/underscore-min.js"></script> 
